[gd_scene load_steps=4 format=3 uid="uid://dh5k8n3m2pqw1"]

[ext_resource type="Script" path="res://scripts/ui/SettingsMenu.gd" id="1_settings"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.02, 0.059, 0.078, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.898, 1, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.7)
shadow_size = 15

[node name="SettingsMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_theme")
script = ExtResource("1_settings")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.7)

[node name="SettingsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898, 1, 1)
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MasterVolumeSection" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer/MasterVolumeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Master Volume"

[node name="HBox" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/MasterVolumeSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/MasterVolumeSection/HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="SettingsPanel/VBoxContainer/MasterVolumeSection/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "100%"
horizontal_alignment = 2

[node name="MusicVolumeSection" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer/MusicVolumeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Music Volume"

[node name="HBox" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/MusicVolumeSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/MusicVolumeSection/HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 70.0
tick_count = 11
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="SettingsPanel/VBoxContainer/MusicVolumeSection/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "70%"
horizontal_alignment = 2

[node name="SFXVolumeSection" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer/SFXVolumeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Sound Effects Volume"

[node name="HBox" type="HBoxContainer" parent="SettingsPanel/VBoxContainer/SFXVolumeSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/SFXVolumeSection/HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0
tick_count = 11
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="SettingsPanel/VBoxContainer/SFXVolumeSection/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "80%"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "CLOSE"

